--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "bootstrap": "^4.1.3",
+    "gray-matter": "^4.0.1",
+    "klaw": "^3.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-markdown": "^4.0.3",
     "react-router": "^4.2.0",
-    "react-static": "^5.9.12"
+    "react-static": "^5.9.12",
+    "reactstrap": "^6.5.0"
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
