--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "formik": "^1.3.1",
     "gray-matter": "^4.0.1",
     "klaw": "^3.0.0",
     "react": "^16.0.0",
