--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "crypto-stream": "^1.0.0",
     "formik": "^1.3.1",
     "gray-matter": "^4.0.1",
+    "ipfs": "^0.32.3",
     "klaw": "^3.0.0",
+    "nanoid": "^1.3.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-markdown": "^4.0.3",
     "react-router": "^4.2.0",
     "react-static": "^5.9.12",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "stream-combiner2": "^1.1.1",
+    "tar-stream": "^1.6.2"
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
